--- a/MSDSHelper.Model/MSDSHelper.Model.csproj
+++ b/MSDSHelper.Model/MSDSHelper.Model.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Danger.cs" />
     <Compile Include="Element.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Unit.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
