--- a/MSDSHelper.BLL/MSDSHelper.BLL.csproj
+++ b/MSDSHelper.BLL/MSDSHelper.BLL.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ElementBLL.cs" />
     <Compile Include="IBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitBLL.cs" />
     <Compile Include="UserBLL.cs" />
   </ItemGroup>
   <ItemGroup>
