--- a/MSDSHelper.UI/MSDSHelper.UI.csproj
+++ b/MSDSHelper.UI/MSDSHelper.UI.csproj
@@ -127,9 +127,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MSDSHelper.BLL\MSDSHelper.BLL.csproj">
+    <ProjectReference Include="..\MSDSHelper.BLL\MSDSHelper.Service.csproj">
       <Project>{235FA7D3-979F-40DE-BF6F-F5280F74CFC7}</Project>
-      <Name>MSDSHelper.BLL</Name>
+      <Name>MSDSHelper.Service</Name>
     </ProjectReference>
     <ProjectReference Include="..\MSDSHelper.Model\MSDSHelper.Model.csproj">
       <Project>{53539709-26DB-40D1-BEDD-501421F08657}</Project>
