--- a/MSDSHelper.UI/MSDSHelper.UI.csproj
+++ b/MSDSHelper.UI/MSDSHelper.UI.csproj
@@ -116,6 +116,7 @@
     <EmbeddedResource Include="UserForm.resx">
       <DependentUpon>UserForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
